saves/test/demo_full_20240802_193545/circuit10/debug_1/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp circuit10_tb.v circuit10.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
circuit10_tb.v:185: $finish called at 570000 (1ps)

iverilog cmd 2 error:

